--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.9",
-    "next": "15.4.4",
+    "next": "^16.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
